# Rusterminal

./: .gitignore  Cargo.toml  LICENSE  README.md  VERSION  changes.md  changes.txt  fakeinstall.sh  format.sh  launch.sh
.github/workflows/: rust-clippy.yml
config/: settings.conf
installer/: install.sh  uninstall.sh  upgrade.sh
src/: cmds.rs  diskfmt.py  funcs.rs  install.sh  launch.sh  loadconfigs.rs  logger.rs  main.rs  settings.conf  sysinfo.rs  uninstall.sh  upgrade.sh  ver.py  xray.py  xray.rs
src/sys/: mod.rs  s_info.rs  s_vars.rs
