[package]
name = "rusterminal"
version = "0.3.1-beta3"
edition = "2024"

[dependencies]
hostname = "0.4.1"
regex = "1.11.1"
rustc_version = "0.4.1"
rustc_version_runtime = "0.3.0"
rustyline = "15.0.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
