[package]
name = "Rusterminal"
version = "0.3.1-beta5"
edition = "2024"

[dependencies]
hostname = "0.4.1"
regex = "1.11.1"
rustc_version = "0.4.1"
rustc_version_runtime = "0.3.0"
rustyline = "15.0.0"
reqwest = { version = "0.12.15", features = ["json"] }
once_cell = "1.21.3"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }
